# sane-project-backends

./: acinclude.m4  brother_mfp.conf.in  configure.ac
backend/: Makefile.am  artec_eplus48u.c  avision.c  avision.h  brother_mfp-common.h  brother_mfp-driver.cpp  brother_mfp-driver.h  brother_mfp-encoder.cpp  brother_mfp-encoder.h  brother_mfp.c  brother_mfp.cpp  coolscan.c  escl.conf.in  hp-handle.c  hp3500.c  pixma.conf.in  plustek.c  plustek_pp.c  snapscan.c  test.c  u12.c  xerox_mfp.c
backend/brother_mfp/: brother_mfp-common.h  brother_mfp-driver.cpp  brother_mfp-driver.h  brother_mfp-driver_network.cpp  brother_mfp-driver_usb.cpp  brother_mfp-encoder.cpp  brother_mfp-encoder.h  brother_mfp.cpp
backend/escl/: escl.c  escl.h  escl_jpeg.c  escl_newjob.c  escl_status.c
backend/pixma/: pixma.c  pixma.h  pixma_axis.c  pixma_axis.h  pixma_axis_private.h  pixma_bjnp.c  pixma_common.c  pixma_common.h  pixma_imageclass.c  pixma_io_sanei.c  pixma_mp150.c  pixma_mp730.c  pixma_mp750.c  pixma_mp800.c
doc/: Makefile.am  man-html.css  sane-brother_mfp.man
doc/descriptions/: escl.desc  pixma.desc
frontend/: Makefile.am  pdfgen.c  pdfgen.h
include/sane/: sanei_thread.h
sanei/: sanei_thread.c
testsuite/backend/: Makefile.am
testsuite/backend/brother_mfp/: Makefile.am  brother_mfp_tests.cpp  brother_mfp_tests.h  brother_mfp_tests_colour_int_rgb.cpp  brother_mfp_tests_colour_jpeg.cpp  brother_mfp_tests_family2.cpp  brother_mfp_tests_family3.cpp  brother_mfp_tests_family4.cpp  brother_mfp_tests_gray_rlength.cpp
tools/: sane-desc.c
