##  Makefile.am -- an automake template for Makefile.in file
##  Copyright (C) 2019  Sane Developers.
##
##  This file is part of the "Sane" build infra-structure.  See
##  included LICENSE file for license information.

if WITH_GENESYS_TESTS
SUBDIR_GENESYS = genesys
endif

if WITH_BROTHER_MFP_TESTS
SUBDIR_BROTHER_MFP = brother_mfp
endif

SUBDIRS = $(SUBDIR_GENESYS) $(SUBDIR_BROTHER_MFP)
